# Jesus

./: .commitlintrc.json  .editorconfig  .eslintignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .releaserc.json  .secrets.baseline  MCP_Agentic_AI_Project_Plan__Issues_.csv  README.md  commitlint.config.mjs  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: ci.test.ts  ci.yml  security.test.ts  security.yml
.husky/: pre-commit
apps/: README.md
apps/agent-runner/test-data/: checkpoint-test-graph-1.json  checkpoint-test-graph-3.json  checkpoint-test-graph-4.json  checkpoint-test-graph-5.json  checkpoint-test-graph-6.json  checkpoint-test-graph-7.json  checkpoint-test-graph-8.json  graph-test-graph-1.json  graph-test-graph-3.json  graph-test-graph-4.json  graph-test-graph-5.json  graph-test-graph-6.json  graph-test-graph-7.json  graph-test-graph-8.json
apps/mcp-server/: Dockerfile  README.md  package-lock.json  package.json
apps/mcp-server/src/: index.error-handling.test.ts  index.error.test.ts  index.integration.test.ts  index.lifecycle.test.ts  index.test.ts  index.ts
docs/: README.md  charter.md  charter.test.ts
docs/adr/: 000-index.md  001-license-selection.md  002-monorepo-structure.md  003-model-adapter-interface.md  004-observability-stack.md  005-task-queue-technology.md
docs/architecture/: README.md  c1-system-context.mmd  c2-container.mmd  c3-component.mmd
examples/: README.md
tests/config/: commitlint.test.ts  eslint.test.ts  prettier.test.ts  typescript.test.ts
(+18 files in other folders)
